added exception package, fixed main method, deleted OperationStrategy interface